apps/docker-registry/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app: docker-registry
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30500  # Puerto accesible desde fuera del cluster
    protocol: TCP
    name: http
  selector:
    app: docker-registry
